<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20dp"
    android:layout_marginTop="20dp"
    android:layout_marginEnd="20dp"
    android:layout_marginBottom="10dp"
    android:background="@drawable/blue_drawable"
    android:orientation="vertical"
    android:padding="10dp"
    tools:layout_constraintCircleRadius="5dp">

    <TextView
        android:id="@+id/item_nom"
        style="@style/text_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/nom"
        android:textColor="@android:color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/item_description"
        style="@style/text_style"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center"
        android:text="@string/description"
        android:textColor="@android:color/white"
        android:textSize="20sp" />

    <Button
        android:id="@+id/item_contribuer_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/yellow_drawable"
        android:padding="10dp"
        android:text="@string/contribuer"
        android:textColor="@android:color/white"
        android:textSize="15sp" />

</LinearLayout>